Docker mostrando projeto e Tailwind Funcionando

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,14 +1,24 @@
-FROM node:20-alpine
+FROM node:18-alpine
 
 WORKDIR /app
 
-ENV NODE_ENV=development
-ENV VITE_HOST=0.0.0.0
+# Instalar dependências do sistema necessárias
+RUN apk add --no-cache libc6-compat
 
+# Copiar arquivos de configuração
 COPY package*.json ./
+COPY config/vite.config.js ./
+COPY src/index.html ./
+
+# Instalar dependências
 RUN npm install
 
+# Copiar o resto do código
 COPY . .
+
+# Instalar TailwindCSS e suas dependências
+RUN npm install -D tailwindcss postcss autoprefixer
+RUN npx tailwindcss init -p
 
 EXPOSE 5173
 
