--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "seu-projeto",
+    "name": "projeto-skins",
     "private": true,
     "version": "0.0.1",
     "type": "module",
@@ -9,6 +9,7 @@
         "preview": "vite preview --config config/vite.config.js"
     },
     "dependencies": {
+        "lucide-react": "^0.263.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
