--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,28 +2,22 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Usar gcompat ao invés de libc6-compat
 RUN apk add --no-cache gcompat
 
-# Copiar apenas os arquivos necessários para instalar dependências
 COPY package*.json ./
 
-# Instalar dependências incluindo TailwindCSS
 RUN npm install && \
     npm install -D tailwindcss postcss autoprefixer && \
+    npm install -D @types/node && \
     npx tailwindcss init -p
 
-# Copiar os arquivos de configuração
 COPY tsconfig*.json ./
-COPY postcss.config.js ./
-COPY tailwind.config.js ./
-COPY config/ ./config/
+COPY config/postcss.config.js ./  
+COPY config/tailwind.config.js ./
+COPY config/vite.config.js ./
 
-# Copiar o código fonte
 COPY src/ ./src/
 
-# Expor a porta
 EXPOSE 5173
 
-# Comando para iniciar o servidor de desenvolvimento
 CMD ["npm", "run", "dev"]
